121 ==> 262231 : Missing records after migration from SQLite to digiKam.
122 ==> 267733 : Automatical initialisation of Internal MySQL database doesn't work after digikam start.
123 ==> 254533 : Make MySQL support as optional dependency [patch].
124 ==> 271598 : digiKam crashes while downloading photos.
125 ==> 269375 : Face tags count error.
126 ==> 269291 : Function "View->Include tag subtree" does not function on "People".
127 ==> 272023 : digiKam crash on deleting tags (quickly).
128 ==> 265431 : digiKam cmake check for JPEG_LIB_VERSION fails for libjpeg-turbo >= 1.0.90.
129 ==> 273068 : digiKam 1.9.0 crashes while importing images.
130 ==> 272301 : Mysql database corruption upon tag hierarchy removal.
131 ==> 266264 : Localized version of batch raw converter not fit to window.
132 ==> 273369 : digikam does not get UUID for disk devices inside LVM.
133 ==> 271591 : Startup may take a very long time.
134 ==> 202202 : Loosing tags from database.
135 ==> 194950 : digiKam endlessly spewing text to stderr.
136 ==> 273716 : transupp.cpp failing at make (2.0.0 Beta 5 under Fedora 14).
137 ==> 272586 : Crash when playing with databasebackend.
138 ==> 269907 : Please consider attached patch for build system: make apidoc generation controllable.
139 ==> 271323 : digiKam crashes when building thumbnails of grayscale DNGs.
140 ==> 274455 : Build fails in kmemoryinfo - invalid conversion from 'void*' to 'kstat_named_t*'.
141 ==> 174828 : Missing HTML closing tag in some strings.
142 ==> 274432 : Build fails due to UINT32.
143 ==> 274062 : Possibility to store metadata templates.
144 ==> 275039 : [PATCH] switch to semantic internationalisation.
145 ==> 274462 : Build failure in kmemoryinfo - swapctl.
146 ==> 229571 : "Set As Thumbnail" is not working correctly for tags folder view. 
147 ==> 274660 : Face regognition crashes DK.
148 ==> 274713 : digiKam crashed unexpectedly.
149 ==> 274302 : Search for _two_ keywords with logical "and" fails.
150 ==> 